--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+apply from: rootProject.file('config.gradle')
 buildscript {
     repositories {
         jcenter()
