--- a/config.gradle
+++ b/config.gradle
@@ -19,6 +19,7 @@ ext {
             recyclerview      : "com.android.support:recyclerview-v7:$supportLibrariesVersion",
             junit             : 'junit:junit:4.12',
             commonsCodec      : 'commons-codec:commons-codec:1.10',
+            picasso           : 'com.squareup.picasso:picasso:2.5.2',
 
     ]
 
